syntax = "proto3";

package api;
option go_package = "/api";

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

message Script {
  int64 id = 1;
  string lang = 2;
  string name = 3;
  string source = 4;
  string description = 5;
  google.protobuf.Timestamp created_at = 99;
  google.protobuf.Timestamp updated_at = 100;
}

message NewScriptRequest {
  string lang = 1;
  string name = 2;
  string source = 3;
  string description = 4;
}

message GetScriptRequest {
  int64 id = 1;
}

message DeleteScriptRequest {
  int64 id = 1;
}

message UpdateScriptRequest {
  int64 id = 1;
  string lang = 2;
  string name = 3;
  string source = 4;
  string description = 5;
}

message ExecScriptRequest {
  int64 id = 1;
}

message ExecSrcScriptRequest {
  string lang = 1;
  string name = 2;
  string source = 3;
  string description = 4;
}

message ExecScriptResult {
  string result = 1;
}

message GetScriptListRequest {
  uint64 limit = 1;
  uint64 offset = 2;
  string order = 3;
  string sort_by = 4;
}

message GetScriptListResult {
  repeated Script items = 1;
  message Meta {
    uint64 limit = 1;
    uint64 objects_count = 2;
    uint64 offset = 3;
  }
  Meta meta = 2;
}

message SearchScriptRequest {
  string query = 1;
  int64 limit = 2;
  int64 offset = 3;
}

message SearchScriptListResult {
  repeated Script items = 1;
}

message CopyScriptRequest {
  int64 id = 1;
}

service ScriptService {

  // add new script
  rpc AddScript (NewScriptRequest) returns (Script){
    option (google.api.http) = {
      post: "/v1/script"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }

  // get script by id
  rpc GetScriptById (GetScriptRequest) returns (Script){
    option (google.api.http) = {
      get: "/v1/script/{id}"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }

  // update script
  rpc UpdateScriptById (UpdateScriptRequest) returns (Script){
    option (google.api.http) = {
      put: "/v1/script/{id}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }

  // get script list
  rpc GetScriptList (GetScriptListRequest) returns (GetScriptListResult){
    option (google.api.http) = {
      get: "/v1/scripts"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }

  // delete script by id
  rpc SearchScript (SearchScriptRequest) returns (SearchScriptListResult){
    option (google.api.http) = {
      get: "/v1/scripts/search"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }

  // delete script by id
  rpc DeleteScriptById (DeleteScriptRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      delete: "/v1/script/{id}"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }

  // exec script by id
  rpc ExecScriptById (ExecScriptRequest) returns (ExecScriptResult){
    option (google.api.http) = {
      post: "/v1/script/{id}/exec"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }

  // exec src script by id
  rpc ExecSrcScriptById (ExecSrcScriptRequest) returns (ExecScriptResult){
    option (google.api.http) = {
      post: "/v1/script/exec_src"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }

  // copy script by id
  rpc CopyScriptById (CopyScriptRequest) returns (Script){
    option (google.api.http) = {
      post: "/v1/script/{id}/copy"
    };
    option (grpc.gateway.protoc_gen_swagger.options.openapiv2_operation) = {
      security: {
        security_requirement: {
          key: "ApiKeyAuth"
          value: {}
        }
      }
    };
  }
}
